# first-anchor-program

./: Anchor.toml
programs/first-anchor-program/: Cargo.toml
programs/first-anchor-program/src/: lib.rs
programs/gm-anchor/: Cargo.toml
programs/gm-anchor/src/: lib.rs
tests/: 81sJuUXR5Z1xgEvQjzo1s2sNsxpLvCft  Usrw6vhCpH4uWYJ6WeTKUAGM1zzSREVzFPNdirtANDz.json  first-anchor-program.ts
